--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mapbox-gl": "^1.12.0",
     "material-ui-popup-state": "^1.7.0",
     "mdbreact": "^4.27.0",
+    "moment": "^2.29.1",
     "prop-types": "^15.7.2",
     "react": "^16.14.0",
     "react-bootstrap-icons": "^1.0.3-alpha5",
