--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-twitter-embed": "^3.0.3",
     "reactjs-popup": "^1.5.0",
     "redux": "^4.0.5",
+    "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "styled-components": "^5.2.1",
     "supercluster": "^7.1.0",
