--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mapbox-gl": "^1.12.0",
     "material-ui-popup-state": "^1.7.0",
     "mdbreact": "^4.27.0",
+    "plotly.js": "^1.57.1",
     "prop-types": "^15.7.2",
     "react": "^16.14.0",
     "react-bootstrap-icons": "^1.0.3-alpha5",
@@ -30,6 +31,7 @@
     "react-dom": "^16.14.0",
     "react-map-gl": "^5.2.9",
     "react-places-autocomplete": "^7.3.0",
+    "react-plotly.js": "^2.5.0",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.4",
